--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   },
   "scripts": {
     "dev": "next dev",
+    "prebuild": "next lint --fix",
     "build": "next build",
     "turbo": "next dev --turbo",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint --fix",
     "preview": "next build && next start",
     "db:studio": "prisma studio",
     "db:push": "prisma db push",
@@ -24,6 +25,10 @@
     }
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.29.0",
+    "@editorjs/header": "^2.8.1",
+    "@editorjs/list": "^1.9.0",
+    "@editorjs/table": "^2.3.0",
     "@hookform/resolvers": "^3.3.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.7.1",
@@ -68,6 +73,7 @@
     "concurrently": "^8.2.2",
     "contentlayer": "^0.3.4",
     "date-fns": "^2.30.0",
+    "editorjs-html": "^3.4.3",
     "lucide-react": "^0.294.0",
     "ms": "^2.1.3",
     "next": "14.0.4",
