--- a/package.json
+++ b/package.json
@@ -64,6 +64,11 @@
     "@react-email/components": "0.0.12",
     "@react-email/html": "0.0.7",
     "@t3-oss/env-nextjs": "^0.7.1",
+    "@tanstack/react-query": "^5.17.19",
+    "@trpc/client": "11.0.0-next-beta.242",
+    "@trpc/next": "11.0.0-next-beta.242",
+    "@trpc/react-query": "11.0.0-next-beta.242",
+    "@trpc/server": "11.0.0-next-beta.242",
     "@typescript-eslint/parser": "^6.15.0",
     "@vercel/analytics": "^1.1.1",
     "@vercel/og": "^0.6.0",
