--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-hover-card": "^1.0.7",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-navigation-menu": "^1.1.4",
@@ -96,6 +97,7 @@
     "resend": "^1.1.0",
     "sharp": "^0.33.0",
     "shiki": "^0.14.6",
+    "slugify": "^1.6.6",
     "stripe": "^14.9.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
