--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Gateber",
+  "name": "gateber",
   "version": "0.1.0",
   "private": true,
   "author": {
@@ -19,11 +19,6 @@
     "db:generate": "prisma generate",
     "postinstall": "prisma generate",
     "email": "email dev --dir emails --port 3333"
-  },
-  "overrides": {
-    "next-contentlayer": {
-      "next": "$next"
-    }
   },
   "dependencies": {
     "@editorjs/editorjs": "2.29.0",
@@ -77,15 +72,12 @@
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
     "cmdk": "0.2.0",
-    "concurrently": "8.2.2",
-    "contentlayer": "0.3.4",
     "date-fns": "2.30.0",
     "editorjs-html": "3.4.3",
     "lucide-react": "0.294.0",
     "ms": "2.1.3",
     "next": "14.1.0",
     "next-auth": "4.24.5",
-    "next-contentlayer": "0.3.4",
     "next-themes": "0.2.1",
     "nodemailer": "6.9.7",
     "prop-types": "15.8.1",
@@ -94,10 +86,8 @@
     "react-dom": "18.2.0",
     "react-email": "1.10.0",
     "react-hook-form": "7.49.2",
-    "react-textarea-autosize": "8.5.3",
-    "resend": "1.1.0",
+    "resend": "3.1.0",
     "sharp": "0.33.0",
-    "shiki": "0.14.6",
     "slugify": "1.6.6",
     "stripe": "14.9.0",
     "tailwind-merge": "2.1.0",
