add contact form

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,9 @@ DATABASE_URL='mysql://your-planetscale-url'
 # Email (Resend)
 # -----------------------------------------------------------------------------
 RESEND_API_KEY=
+NEXT_PUBLIC_RESEND_API_KEY=
+ADMIN_EMAIL=
+NEXT_PUBLIC_ADMIN_EMAIL=
 
 # -----------------------------------------------------------------------------
 # Subscriptions (Stripe)
